# equitrain

./: .gitignore  README.md  equitrain.yml  pyproject.toml  setup.py
equitrain/: __init__.py  argparser.py  aselmdb_xyz.py  atomic_numbers.py  check_h5.py  dataloaders.py  e_train.py  force.py  lmdb_pre.py  lmdb_preprocess.py  lmdb_to_xyz.py  model.py  predict.py  preprocess.py  stress.py  train.py  train_fabric.py  train_lightning.py
equitrain.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
equitrain/equiformer_v1/: __init__.py  dp_attention_transformer_md17.py  dp_attention_transformer_oc20.py  graph_attention_transformer.py  graph_attention_transformer_md17.py  graph_attention_transformer_oc20.py
equitrain/equiformer_v2/: __init__.py  edge_rot_mat.py  equiformer_v2_oc20.py  so3.py
equitrain/mace/data/: __init__.py  atomic_data.py  hdf5_dataset.py  utils.py
equitrain/mace/modules/: blocks.py
equitrain/mace/tools/: __init__.py  arg_parser.py  scripts_utils.py  torch_tools.py  utils.py
equitrain/ocpmodels/: atoms_to_graphs.py
equitrain/ocpmodels/common/: utils.py
equitrain/ocpmodels/models/: base.py  spinconv.py
equitrain/ocpmodels/preprocessing/: __init__.py  (+1 more)
equitrain/scripts/: equitrain.py  equitrain_preprocess.py
scripts/: equitrain  equitrain-preprocess
tests/: data.xyz  test_predict.py  test_predict_atoms.py  test_predict_structure.py  test_predict_structures.py  test_preprocess.py  test_train.py  test_train_fabric.py  test_train_lightning.py
tests/data/: statistics.json  train.h5
tests/my_tests/: split_data.py
(+21 files in other folders)
