[build-system]
requires = [
    'setuptools>=42',
    'wheel',
    'ase',
    'h5py',
    'numpy',
    'pymatgen',
    'torch',
    'torch_ema',
    'torch_geometric',
    'torch_scatter',
    'torch_cluster',
    'torchmetrics',
    'tqdm',
    'timm',
    'accelerate',
    'e3nn',
]
build-backend = "setuptools.build_meta"

[project]
name = "equitrain"
version = "0.0.1"
description = "A training framework for machine learning interatomic potentials (MLIPs)"
authors = [
    {name = "Carlos Madariaga"},
    {name = "Philipp Benner"},
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["MLIP", "machine learning", "materials"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.scripts]
equitrain            = "equitrain.scripts.equitrain:main"
equitrain-preprocess = "equitrain.scripts.equitrain_preprocess:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["equitrain"]

[tool.equitrain]
conda_env_file = "environment.yml"
